force-app/main/default/objects/CMAllocation_For_Non_Aspen_Products__mdt/CMAllocation_For_Non_Aspen_Products__mdt.object-meta.xml
<CustomObject>
    <label>CMAllocation For Non Aspen Products</label>
    <pluralLabel>CMAllocation For Non Aspen Products</pluralLabel>
</CustomObject>