force-app/main/default/objects/CMAllocation_For_Non_Aspen_Products__mdt/fields/Flex__c.field-meta.xml
<CustomField>
    <fullName>Flex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flex</label>
    <type>Checkbox</type>
</CustomField>