force-app/main/default/objects/CMAllocation_For_Non_Aspen_Products__mdt/fields/Smci__c.field-meta.xml
<CustomField>
    <fullName>Smci__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smci</label>
    <type>Checkbox</type>
</CustomField>