force-app/main/default/objects/CMAllocation_For_Non_Aspen_Products__mdt/fields/SMCI_Percentage__c.field-meta.xml
<CustomField>
    <fullName>SMCI_Percentage__c</fullName>
    <label>SMCI Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>