force-app/main/default/objects/CMAllocation_For_Non_Aspen_Products__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aspen</fullName>
                <default>true</default>
                <label>Aspen</label>
            </value>
            <value>
                <fullName>Non Aspen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>