force-app/main/default/objects/CMAllocation_For_Non_Aspen_Products__mdt/validationRules/Validatation_more_than_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Validatation_more_than_100</fullName>
    <active>true</active>
    <errorConditionFormula>Flex_Percentage__c  + SMCI_Percentage__c &gt; 100</errorConditionFormula>
    <errorMessage>sum total of flex and smci  cannot be more than 100</errorMessage>
</ValidationRule>