force-app/main/default/objects/CMAllocation_For_Non_Aspen_Products__mdt/listViews/Non_Aspen_Products.listView-meta.xml
<ListView>
    <fullName>Non_Aspen_Products</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Flex__c</columns>
    <columns>Flex_Percentage__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Smci__c</columns>
    <columns>SMCI_Percentage__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Non Aspen</value>
    </filters>
    <label>Non Aspen Products</label>
</ListView>